--- a/Python Modules/llrf/llrf.cbp
+++ b/Python Modules/llrf/llrf.cbp
@@ -4,16 +4,16 @@
 	<Project>
 		<Option title="llrfPYD" />
 		<Option pch_mode="2" />
-		<Option compiler="ms_visual_c_2012" />
+		<Option compiler="ms_visual_c_2019" />
 		<Build>
 			<Target title="Release">
 				<Option output="\\apclara1\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_LLRF_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
-				<Option compiler="ms_visual_c_2012" />
+				<Option compiler="microsoft_visual_c_2019" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
-				<Compiler>
+				<Compiler>					
 					<Add option="/MD" />
 					<Add option="/Ox" />
 					<Add option="/W3" />
@@ -21,23 +21,26 @@
 					<Add option="/DBUILD_DLL" />
 					<Add option="/DNDEBUG" />
 					<Add directory="include" />
+					<Add directory="include" />
 					<Add directory="../../Hardware" />
-					<Add directory="../../Utilities" />
+					<Add directory="../../Utilities/llrf" />
 					<Add directory="../../Structs" />
 					<Add directory="../../Config" />
 					<Add directory="../../Hardware/magnet" />
 					<Add directory="../../Hardware/screen" />
 					<Add directory="../../Hardware/scope" />
 					<Add directory="../../Hardware/RFGun" />
+					<Add directory="../../Hardware/gun_mod" />
 					<Add directory="../../Hardware/vacuumValve" />
 					<Add directory="../../Hardware/camera" />
 					<Add directory="../../Hardware/beamPositionMonitor" />
 					<Add directory="../../Hardware/invertedMagnetronGauge" />
 					<Add directory="../../Hardware/shutter" />
-					<Add directory="../../Hardware/laser" />
+					<Add directory="../../Hardware/pilaser" />
+					<Add directory="../../Hardware/l01_mod" />
 					<Add directory="../../Hardware/llrf" />
-					<Add directory="../../Utilities/llrf" />
 					<Add directory="../../Structs/llrf" />
+					<Add directory="../../Utilities" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
@@ -46,6 +49,7 @@
 				<ExtraCommands>
 					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
 				</ExtraCommands>
+
 			</Target>
 		</Build>
 		<Unit filename="../../Hardware/VCbase.cpp" />
@@ -77,11 +81,7 @@
 		<Unit filename="main.h" />
 		<Unit filename="src/VCllrf.cpp" />
 		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
 			<lib_finder disable_auto="1" />
-			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
