--- a/Python Modules/magnets/magnetPYD.cbp
+++ b/Python Modules/magnets/magnetPYD.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="\\claraserv3\apclara\test\Controllers\bin\stage\VELA_CLARA_PYDs\bin\Debug\VELA_CLARA_Magnet_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3\claranet\Controllers\bin\stage\VELA_CLARA_PYDs\bin\Debug\VELA_CLARA_Magnet_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -45,7 +45,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\claraserv3\apclara\test\Controllers\bin\stage\VELA_CLARA_Magnet_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3\claranet\test\Controllers\bin\stage\VELA_CLARA_Magnet_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -106,11 +106,7 @@
 		<Unit filename="include/VCmagnets.h" />
 		<Unit filename="src/VCmagnets.cpp" />
 		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
 			<lib_finder disable_auto="1" />
-			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
