chncged paths to new claranet config location

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 *.obj
 *.obj
 *.depend
+*.depend
+*.obj
+Python Modules/rf_prot/obj/Release/Python Modules/rf_prot/src/VCrfprot.obj
+Python Modules/rf_prot/obj/Release/Utilities/baseObject.obj
+*.obj
