--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 Python Modules/rf_prot/obj/Release/Python Modules/rf_prot/src/VCrfprot.obj
 Python Modules/rf_prot/obj/Release/Utilities/baseObject.obj
 *.obj
+*.obj
