--- a/Python Modules/bpms/bpms.cbp
+++ b/Python Modules/bpms/bpms.cbp
@@ -37,7 +37,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3\claranet\test\Controllers\bin\stage\VELA_CLARA_BPM_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -90,10 +90,6 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="main.h" />
 		<Unit filename="src/VCBPMs.cpp" />
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-		</Extensions>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
