--- a/Python Modules/ba1_stages/ba1_stages.cbp
+++ b/Python Modules/ba1_stages/ba1_stages.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Release">
-				<Option output="\\claraserv3\apclara\test\Controllers\bin\stage\VELA_CLARA_BA1_Stages_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3\test\Controllers\bin\stage\VELA_CLARA_BA1_Stages_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -70,11 +70,7 @@
 		<Unit filename="include/VCba1stages.h" />
 		<Unit filename="src/VCba1stages.cpp" />
 		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
 			<lib_finder disable_auto="1" />
-			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
