--- a/Python Modules/charge/charge.cbp
+++ b/Python Modules/charge/charge.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_Charge_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3\claranet\test\Controllers\bin\stage\VELA_CLARA_Charge_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -30,7 +30,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_Charge_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3\claranet\test\Controllers\bin\stage\VELA_CLARA_Charge_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -44,6 +44,12 @@
 					<Add option="/DBUILD_DLL" />
 					<Add option="/DNDEBUG" />
 					<Add directory="include" />
+					<Add directory="../../Hardware" />
+					<Add directory="../../Hardware/charge" />
+					<Add directory="../../Structs" />
+					<Add directory="../../Structs/charge" />
+					<Add directory="../../Utilities" />
+					<Add directory="../../Utilities/charge" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
@@ -77,9 +83,6 @@
 		<Unit filename="include/VCcharge.h" />
 		<Unit filename="src/VCcharge.cpp" />
 		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
 			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
