--- a/Python Modules/vela_clara_enums/vela_clara_enums.cbp
+++ b/Python Modules/vela_clara_enums/vela_clara_enums.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Release">
-				<Option output="\\apclara1\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_enums" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3\claranet\test\Controllers\bin\stage\VELA_CLARA_enums" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -44,9 +44,6 @@
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
 			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
