--- a/Python Modules/rf_prot/rf_protPYD.cbp
+++ b/Python Modules/rf_prot/rf_protPYD.cbp
@@ -10,15 +10,15 @@
 				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\Debug\VELA_CLARA_RF_Protection_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
-				<Option compiler="ms_visual_c_2012" />
+				<Option compiler="microsoft_visual_studio_2019" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="/W3" />
-					<Add option="/DBUILD_DLL" />
-					<Add option="/Zi" />
-					<Add option="/D_DEBUG" />
 					<Add option="/MDd" />
+					<Add option="/W3" />
+					<Add option="/Zi" />
+					<Add option="/DBUILD_DLL" />
+					<Add option="/D_DEBUG" />
 					<Add directory="include" />
 				</Compiler>
 				<Linker>
@@ -31,10 +31,10 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\claraserv3\claranet\test\Controllers\bin\stage\VELA_CLARA_RF_Protection_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3.dl.ac.uk\claranet\packages\vcc\Python38_x64\bin\VELA_CLARA_RF_Protection_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
-				<Option compiler="ms_visual_c_2012" />
+				<Option compiler="microsoft_visual_studio_2019" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -106,6 +106,10 @@
 		<Unit filename="src/VCrfprot.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
+			<code_completion />
+			<envvars />
+			<debugger />
+			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
