--- a/Python Modules/screens/screenPYD.cbp
+++ b/Python Modules/screens/screenPYD.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_Screen_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3.dl.ac.uk\claranet\packages\vcc\Python38_x64\bin\VELA_CLARA_Screen_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -31,10 +31,10 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\claraserv3\claranet\test\Controllers\bin\stage\VELA_CLARA_Screen_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3.dl.ac.uk\claranet\packages\vcc\Python38_x64\bin\VELA_CLARA_Screen_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
-				<Option compiler="ms_visual_c_2012" />
+				<Option compiler="microsoft_visual_studio_2019" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -94,6 +94,10 @@
 		<Unit filename="src/VCscreens.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
+			<code_completion />
+			<envvars />
+			<debugger />
+			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
