--- a/Python Modules/general_monitor/general_monitor.cbp
+++ b/Python Modules/general_monitor/general_monitor.cbp
@@ -7,42 +7,33 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Release">
-				<Option output="\\claraserv3.dl.ac.uk\claranet\packages\vcc\Python38_x64\bin\VELA_CLARA_General_Monitor" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../VELA-CLARA-Controllers-build/PyModules/VELA_CLARA_General_Monitor" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
-				<Option compiler="microsoft_visual_studio_2019" />
+				<Option compiler="microsoft_visual_c_2014" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
+				<Option projectCompilerOptionsRelation="-1" />
+				<Option projectLinkerOptionsRelation="-1" />
+				<Option projectLibDirsRelation="-1" />
 				<Compiler>
-					<Add option="/MD" />
-					<Add option="/Ox" />
-					<Add option="/W3" />
-					<Add option="/EHsc" />
-					<Add option="/DBUILD_DLL" />
-					<Add option="/DNDEBUG" />
-					<Add directory="include" />
-					<Add directory="../../Hardware" />
-					<Add directory="../../Utilities" />
-					<Add directory="../../Structs" />
 					<Add directory="../../Config" />
-					<Add directory="../../Hardware/magnet" />
-					<Add directory="../../Hardware/screen" />
-					<Add directory="../../Hardware/scope" />
-					<Add directory="../../Hardware/RFGun" />
-					<Add directory="../../Hardware/vacuumValve" />
-					<Add directory="../../Hardware/camera" />
-					<Add directory="../../Hardware/beamPositionMonitor" />
-					<Add directory="../../Hardware/invertedMagnetronGauge" />
-					<Add directory="../../Hardware/shutter" />
-					<Add directory="../../Hardware/pilaser" />
+					<Add directory="../../Hardware" />
+					<Add directory="../../Structs" />
+					<Add directory="../../Utilities" />
+					<Add directory="../../Hardware/general_monitor" />
+					<Add directory="../../Structs/general_monitor" />
+					<Add directory="../../Utilities/general_monitor" />
+					<Add directory="C:/Users/ujo48515/Documents/VELA-CLARA-Controllers/Python Modules/general_monitor/include" />
 				</Compiler>
-				<Linker>
-					<Add option="/INCREMENTAL:NO" />
-					<Add library="user32" />
-				</Linker>
-				<ExtraCommands>
-					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
-				</ExtraCommands>
+				<MakeCommands>
+					<Build command="" />
+					<CompileFile command="" />
+					<Clean command="" />
+					<DistClean command="" />
+					<AskRebuildNeeded command="" />
+					<SilentBuild command=" &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 		</Build>
 		<Unit filename="../../Hardware/VCbase.cpp" />
@@ -64,11 +55,6 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="main.h" />
 		<Unit filename="src/VCgeneralMonitor.cpp" />
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-			<fortran_project />
-		</Extensions>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
