--- a/Python Modules/llrf/llrf.cbp
+++ b/Python Modules/llrf/llrf.cbp
@@ -7,49 +7,26 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Release">
-				<Option output="\\claraserv3.dl.ac.uk\claranet\packages\vcc\Python38_x64\bin\VELA_CLARA_LLRF_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../VELA-CLARA-Controllers-build/PyModules/VELA_CLARA_LLRF_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
-				<Option compiler="microsoft_vsual_studio_2019" />
+				<Option compiler="microsoft_visual_c_2014" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
+				<Option projectCompilerOptionsRelation="-1" />
+				<Option projectLinkerOptionsRelation="-1" />
+				<Option projectResourceIncludeDirsRelation="-1" />
+				<Option projectLibDirsRelation="-1" />
 				<Compiler>
-					<Add option="/MD" />
-					<Add option="/EHc" />
-					<Add option="/Ox" />
-					<Add option="/W3" />
-					<Add option="/EHsc" />
-					<Add option="/DBUILD_DLL" />
-					<Add option="/DNDEBUG" />
-					<Add option="/DGS" />
 					<Add directory="include" />
-					<Add directory="../../Hardware" />
-					<Add directory="../../Utilities/llrf" />
-					<Add directory="../../Structs" />
 					<Add directory="../../Config" />
-					<Add directory="../../Hardware/magnet" />
-					<Add directory="../../Hardware/screen" />
-					<Add directory="../../Hardware/scope" />
-					<Add directory="../../Hardware/RFGun" />
-					<Add directory="../../Hardware/gun_mod" />
-					<Add directory="../../Hardware/vacuumValve" />
-					<Add directory="../../Hardware/camera" />
-					<Add directory="../../Hardware/beamPositionMonitor" />
-					<Add directory="../../Hardware/invertedMagnetronGauge" />
-					<Add directory="../../Hardware/shutter" />
-					<Add directory="../../Hardware/pilaser" />
-					<Add directory="../../Hardware/l01_mod" />
 					<Add directory="../../Hardware/llrf" />
 					<Add directory="../../Structs/llrf" />
+					<Add directory="../../Utilities/llrf" />
+					<Add directory="../../Hardware" />
+					<Add directory="../../Structs" />
 					<Add directory="../../Utilities" />
 				</Compiler>
-				<Linker>
-					<Add option="/INCREMENTAL:NO" />
-					<Add library="user32" />
-				</Linker>
-				<ExtraCommands>
-					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
-				</ExtraCommands>
 				<MakeCommands>
 					<Build command="" />
 					<CompileFile command="" />
@@ -90,10 +67,6 @@
 		<Unit filename="src/VCllrf.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
-			<code_completion />
-			<envvars />
-			<debugger />
-			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
