--- a/Python Modules/shutter/shutter.cbp
+++ b/Python Modules/shutter/shutter.cbp
@@ -46,42 +46,34 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\claraserv3\claranet\test\Controllers\bin\stage\VELA_CLARA_Shutter_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../VELA-CLARA-Controllers-build/PyModules/VELA_CLARA_Shutter_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
-				<Option compiler="ms_visual_c_2012" />
+				<Option compiler="microsoft_visual_c_2014" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
+				<Option projectCompilerOptionsRelation="-1" />
+				<Option projectLinkerOptionsRelation="-1" />
+				<Option projectResourceIncludeDirsRelation="-1" />
+				<Option projectLibDirsRelation="-1" />
 				<Compiler>
-					<Add option="/MD" />
-					<Add option="/Ox" />
-					<Add option="/W3" />
-					<Add option="/EHsc" />
-					<Add option="/DBUILD_DLL" />
-					<Add option="/DNDEBUG" />
-					<Add directory="include" />
 					<Add directory="../../Hardware" />
-					<Add directory="../../Utilities" />
-					<Add directory="../../Utilities/shutter" />
 					<Add directory="../../Structs" />
+					<Add directory="../../Utilities" />
 					<Add directory="../../Config" />
-					<Add directory="../../Hardware/magnet" />
-					<Add directory="../../Hardware/screen" />
-					<Add directory="../../Hardware/scope" />
-					<Add directory="../../Hardware/gun_prot" />
-					<Add directory="../../Hardware/vacuumValve" />
-					<Add directory="../../Hardware/camera" />
-					<Add directory="../../Hardware/beamPositionMonitor" />
-					<Add directory="../../Hardware/invertedMagnetronGauge" />
+					<Add directory="include" />
 					<Add directory="../../Hardware/shutter" />
+					<Add directory="../../Structs/shutter" />
+					<Add directory="../../Utilities/shutter" />
 				</Compiler>
-				<Linker>
-					<Add option="/INCREMENTAL:NO" />
-					<Add library="user32" />
-				</Linker>
-				<ExtraCommands>
-					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
-				</ExtraCommands>
+				<MakeCommands>
+					<Build command="" />
+					<CompileFile command="" />
+					<Clean command="" />
+					<DistClean command="" />
+					<AskRebuildNeeded command="" />
+					<SilentBuild command=" &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 		</Build>
 		<Unit filename="../../Hardware/VCbase.cpp" />
