--- a/Python Modules/vela_clara_enums/vela_clara_enums.cbp
+++ b/Python Modules/vela_clara_enums/vela_clara_enums.cbp
@@ -7,30 +7,31 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Release">
-				<Option output="\\claraserv3.dl.ac.uk\claranet\packages\vcc\Python38_x64\bin\VELA_CLARA_enums" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../VELA-CLARA-Controllers-build/PyModules/VELA_CLARA_enums" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
-				<Option compiler="microsoft_visual_studio_2019" />
+				<Option compiler="microsoft_visual_c_2014" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
+				<Option projectCompilerOptionsRelation="-1" />
+				<Option projectResourceIncludeDirsRelation="-1" />
+				<Option projectLibDirsRelation="-1" />
 				<Compiler>
-					<Add option="/MD" />
-					<Add option="/Ox" />
-					<Add option="/W3" />
 					<Add option="/DBUILD_DLL" />
-					<Add option="/DNDEBUG" />
-					<Add option="/D__VC_ENUM_ONLY__" />
-					<Add directory="../../structs" />
-					<Add directory="../../Hardware" />
+					<Add directory="../../Hardware/" />
+					<Add directory="../../Structs" />
 					<Add directory="../../Utilities" />
+					<Add directory="../../Config" />
+					<Add directory="../vela_clara_enums" />
 				</Compiler>
-				<Linker>
-					<Add option="/INCREMENTAL:NO" />
-					<Add library="user32" />
-				</Linker>
-				<ExtraCommands>
-					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
-				</ExtraCommands>
+				<MakeCommands>
+					<Build command="" />
+					<CompileFile command="" />
+					<Clean command="" />
+					<DistClean command="" />
+					<AskRebuildNeeded command="" />
+					<SilentBuild command=" &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 		</Build>
 		<Unit filename="../../Hardware/VCheader.h">
@@ -45,10 +46,6 @@
 		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
-			<code_completion />
-			<envvars />
-			<debugger />
-			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
