configs needed for no arc are forced to access the VM- prefixed-PV ROOT

--- a/Config/RFGunModulator.config
+++ b/Config/RFGunModulator.config
@@ -174,7 +174,7 @@ NUMBER_OF_OBJECTS = 1;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 NAME  = GUNMODULATOR;
-PV_ROOT = CLA-GUNS-HRF-MOD-01:
+PV_ROOT = VM-CLA-GUNS-HRF-MOD-01:
 
 ;GOOD_MOD_ERR = 2000;
 ;GOOD_MOD_ERR = 5000;
