--- a/Config/RFGunProtection.config
+++ b/Config/RFGunProtection.config
@@ -44,44 +44,44 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 
 
 NAME  = GENERAL; 
-PV_ROOT = CLA-GUN-RF-PROTG-01:
+PV_ROOT = VM-CLA-GUN-RF-PROTG-01:
 RF_PROT_TYPE = GENERAL
 
 ;NUMBER_OF_ILOCKS  = 2; 
 NAME  = ENABLE; 
-PV_ROOT = CLA-GUN-RF-PROTE-01:;
+PV_ROOT = VM-CLA-GUN-RF-PROTE-01:;
 RF_PROT_TYPE = ENABLE;
 
 
 ;NUMBER_OF_ILOCKS  = 3; 
 NAME  = TEST;
-PV_ROOT = CLA-GUN-RF-PROTT-01:;
+PV_ROOT = VM-CLA-GUN-RF-PROTT-01:;
 GUN_PROT_KEY_BITS = 1,2;
 RF_PROT_TYPE = TEST;
 
 ;NUMBER_OF_ILOCKS  = 13; 
 NAME  = CLARA_LRRG;
-PV_ROOT = CLA-GUN-RF-PROTCL-01:;
+PV_ROOT = VM-CLA-GUN-RF-PROTCL-01:;
 GUN_PROT_KEY_BITS = 1,2,3,4;
 RF_PROT_TYPE = CLARA_LRRG;
 
 ;NUMBER_OF_ILOCKS  = 13; 
 NAME  = CLARA_HRRG;
-PV_ROOT = CLA-GUN-RF-PROTCH-01:;
+PV_ROOT = VM-CLA-GUN-RF-PROTCH-01:;
 GUN_PROT_HAS_GUN_KEYS  = 1;
 GUN_PROT_KEY_BITS = 1,2,3,4;
 RF_PROT_TYPE = CLARA_HRRG;
 
 ;NUMBER_OF_ILOCKS  = 13; 
 NAME  = VELA_LRRG;
-PV_ROOT = CLA-GUN-RF-PROTVL-01:;
+PV_ROOT = VM-CLA-GUN-RF-PROTVL-01:;
 GUN_PROT_HAS_GUN_KEYS  = 1;
 GUN_PROT_KEY_BITS = 1,2,3,4;
 RF_PROT_TYPE = VELA_LRRG;
 
 ;NUMBER_OF_ILOCKS  = 14; 
 NAME  = VELA_HRRG;
-PV_ROOT = CLA-GUN-RF-PROTVH-01:;
+PV_ROOT = VM-CLA-GUN-RF-PROTVH-01:;
 GUN_PROT_HAS_GUN_KEYS  = 1;
 GUN_PROT_KEY_BITS = 1,2,3,4;
 RF_PROT_TYPE = VELA_HRRG;
