--- a/Config/_____CLARA_HRRG_LLRF.config
+++ b/Config/_____CLARA_HRRG_LLRF.config
@@ -76,38 +76,26 @@ PV_COUNT         = 1017;
 PV_MASK           = DBE_VALUE;
 
 PV_SUFFIX_LIB_PULSE_OFFSET = vm:feed_fwd:offset;
-PV_CHTYPE        = DBF_DOUBLE;
+PV_CHTYPE        = DBR_DOUBLE;
 PV_COUNT         = 1;
 PV_MASK           = DBE_VALUE;
 
 PV_SUFFIX_LIB_PULSE_LENGTH = vm:feed_fwd:duration;
 PV_CHTYPE        = DBR_DOUBLE;
 PV_COUNT         = 1;
-PV_MASK          = DBE_VALUE;
+PV_MASK           = DBE_VALUE;
 
-PV_SUFFIX_LIB_PHASE_LOOP_LOCK = vm:dsp:pi_ph:loop_closed;
-PV_CHTYPE        = DBR_ENUM;
-PV_COUNT         = 1;
-PV_MASK          = DBE_VALUE;
     
-PV_SUFFIX_LIB_PULSE_SHAPE = vm:dsp:ff_pulse_shape:amp;
-PV_CHTYPE        = DBR_DOUBLE;
-PV_COUNT         = 1024;
-PV_MASK          = DBE_VALUE;
-
-PV_SUFFIX_LIB_PULSE_SHAPE_APPLY = vm:dsp:ff_pulse_shape:apply_tables;
-PV_CHTYPE        = DBR_ENUM;
-PV_COUNT         = 1;
-PV_MASK          = DBE_VALUE;
+ 
 
 OBJECTS_START;
 
 NUMBER_OF_OBJECTS = 1;   
 NUMBER_OF_ILOCKS  = 0;   
 
-NAME    = VELA-HRRG-LLRF;
+NAME    = CLA-HRRG-LLRF;
 PV_ROOT = VM-CLA-GUN-LRF-CTRL-01:;    
-LLRF_MAX_AMPLITUDE = 15000; maximum amplitude that the controller can apply, for additionaly saftey this could be compiled in at source... 
+LLRF_MAX_AMPLITUDE = 1000; maximum amplitude that the controller can apply, for additionaly saftey this could be compiled in at source... 
 LLRF_PHI_CALIBRATION = 1.00;        llrf phi to degrees 
 LLRF_AMP_CALIBRATION = 1.00;   1/29.016 llrf amplitiude to MV/m in cavity 
 LLRF_CREST_PHI = 0;                 in units of the llrf system 
