--- a/Config/velaINJVacuumValve.config
+++ b/Config/velaINJVacuumValve.config
@@ -37,24 +37,24 @@ NUMBER_OF_ILOCKS  = 7;      If the number of interlocks changes between objects,
 ;name must come first before other factors
 
 NAME    = VALV01;
-PV_ROOT = EBT-INJ-VAC-VALV-01:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-01:;
 
 NAME    = VALV02;
-PV_ROOT = EBT-INJ-VAC-VALV-02:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-02:;
 
 NAME    = VALV03;
-PV_ROOT = EBT-INJ-VAC-VALV-03:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-03:;
 
 NAME    = VALV04;
-PV_ROOT = EBT-INJ-VAC-VALV-04:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-04:;
 
 NAME    = VALV05;
-PV_ROOT = EBT-INJ-VAC-VALV-05:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-05:;
 
 NAME    = VALV06;
-PV_ROOT = EBT-INJ-VAC-VALV-06:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-06:;
 
 NAME    = VALV07;
-PV_ROOT = EBT-INJ-VAC-VALV-07:;
+PV_ROOT = VM-EBT-INJ-VAC-VALV-07:;
 
 END_OF_DATA;
