--- a/Python Modules/img/img.cbp
+++ b/Python Modules/img/img.cbp
@@ -4,36 +4,32 @@
 	<Project>
 		<Option title="img" />
 		<Option pch_mode="2" />
-		<Option compiler="ms_visual_c_2012" />
+		<Option compiler="microsoft_visual_c_2014" />
 		<Build>
 			<Target title="Debug">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\Debug\VELA_CLARA_IMG_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../VELA-CLARA-Controllers-build/PHYSICAL_PYModules/VELA_CLARA_IMG_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
-				<Option compiler="ms_visual_c_2012" />
+				<Option compiler="microsoft_visual_c_2014" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="/MDd" />
-					<Add option="/W3" />
-					<Add option="/Zi" />
-					<Add option="/DBUILD_DLL" />
-					<Add option="/D_DEBUG" />
-				</Compiler>
-				<Linker>
-					<Add option="/DEBUG" />
-					<Add option="/INCREMENTAL:NO" />
-					<Add library="user32" />
-				</Linker>
-				<ExtraCommands>
-					<Add after='cmd /c copy /y &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
-				</ExtraCommands>
+				<Option projectCompilerOptionsRelation="-1" />
+				<Option projectLinkerOptionsRelation="-1" />
+				<Option projectLibDirsRelation="-1" />
+				<MakeCommands>
+					<Build command="" />
+					<CompileFile command="" />
+					<Clean command="" />
+					<DistClean command="" />
+					<AskRebuildNeeded command="" />
+					<SilentBuild command=" &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\fed.cclrc.ac.uk\org\NLab\ASTeC\Projects\VELA\Software\VELA_CLARA_PYDs\bin\stage\VELA_CLARA_IMG_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../VELA-CLARA-Controllers-build/PHYSICAL_PYModules/VELA_CLARA_IMG_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
-				<Option compiler="ms_visual_c_2012" />
+				<Option compiler="microsoft_visual_c_2014" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -42,28 +38,15 @@
 					<Add option="/W3" />
 					<Add option="/EHsc" />
 					<Add option="/DBUILD_DLL" />
-					<Add option="/DNDEBUG" />
 					<Add directory="include" />
 					<Add directory="../../Hardware" />
 					<Add directory="../../Structs" />
 					<Add directory="../../Utilities" />
-					<Add directory="../../Hardware/beamPositionMonitor" />
-					<Add directory="../../Hardware/camera" />
-					<Add directory="../../Hardware/gun_mod" />
-					<Add directory="../../Hardware/gun_prot" />
 					<Add directory="../../Hardware/invertedMagnetronGauge" />
-					<Add directory="../../Hardware/l01_mod" />
-					<Add directory="../../Hardware/llrf" />
-					<Add directory="../../magnet" />
-					<Add directory="../../Hardware/pilaser" />
-					<Add directory="../../Hardware/RFGun" />
-					<Add directory="../../Hardware/scope" />
-					<Add directory="../../Hardware/shutter" />
-					<Add directory="../../Hardware/vacuumValve" />
-					<Add directory="../../Hardware/vela_cam" />
+					<Add directory="../../Config" />
+					<Add directory="../img" />
 				</Compiler>
 				<Linker>
-					<Add option="/INCREMENTAL:NO" />
 					<Add library="user32" />
 				</Linker>
 				<ExtraCommands>
@@ -94,9 +77,6 @@
 		<Unit filename="main.h" />
 		<Unit filename="src/VCimg.cpp" />
 		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
 			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
