--- a/Python Modules/vela_clara_enums/vela_clara_enums.cbp
+++ b/Python Modules/vela_clara_enums/vela_clara_enums.cbp
@@ -7,22 +7,21 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Release">
-				<Option output="../../../VELA-CLARA-Controllers-build/PyModules/VELA_CLARA_enums" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../VELA-CLARA-Controllers-build/PHYSICAL_PYModules/VELA_CLARA_enums" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="microsoft_visual_c_2014" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
-				<Option projectCompilerOptionsRelation="-1" />
-				<Option projectResourceIncludeDirsRelation="-1" />
 				<Option projectLibDirsRelation="-1" />
 				<Compiler>
 					<Add option="/DBUILD_DLL" />
-					<Add directory="../../Hardware/" />
+					<Add option="/DNDEBUG" />
+					<Add option="/D__VC_ENUM_ONLY__" />
 					<Add directory="../../Structs" />
 					<Add directory="../../Utilities" />
 					<Add directory="../../Config" />
-					<Add directory="../vela_clara_enums" />
+					<Add directory="../../Hardware" />
 				</Compiler>
 				<MakeCommands>
 					<Build command="" />
